main.tf
provider "aws" {
    region = "ap-southeast-1" # 싱가포르 리전
  }
  
  resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
  }
  
  resource "aws_subnet" "public" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = "10.0.1.0/24"
    map_public_ip_on_launch = true
  }
  
  resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
  }
  
  resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
  
    route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id
    }
  }
  
  resource "aws_route_table_association" "public_assoc" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
  }
  
  resource "aws_security_group" "web_sg" {
    name   = "web_sg"
    vpc_id = aws_vpc.main.id
  
    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  
  resource "aws_instance" "web" {
    ami                         = "ami-015927f8ee1bc0293" # Ubuntu 22.04 LTS
    instance_type               = "t2.micro" # 인스턴스 유형
    subnet_id                   = aws_subnet.public.id
    vpc_security_group_ids      = [aws_security_group.web_sg.id]
    associate_public_ip_address = true
  
    tags = {
      Name = "TerraformWeb" # 생성되는 EC2 이름
    }
  }
